# Waifu

./: .gitignore  CMakeLists.txt  README.md  build_Android.bat  my-release-key.keystore  private_key.pepk
Classes/: AppDelegate.cpp  AppDelegate.h  Config.h  Data.cpp  Data.h
Classes/Core/Control/: CustomControl.cpp  CustomControl.h  SneakyJoystickSkinnedBase.cpp  SneakyJoystickSkinnedBase.h
Classes/GameObjects/: BaseObject.cpp  BaseObject.h  Tutorial.cpp  Tutorial.h
Classes/GameObjects/AnimationObjects/: AnimationObject.cpp  AnimationObject.h  Door.cpp  Door.h  Goal.cpp  Goal.h  Lever.cpp  Lever.h
Classes/GameObjects/DynamicObjects/: CollapsePlatform.cpp  CollapsePlatform.h  Collectible.cpp  Collectible.h  DynamicObject.cpp  DynamicObject.h  MovingPlatform.cpp  MovingPlatform.h
Classes/GameObjects/MovingObjects/: MainCharacter.cpp  MainCharacter.h  MonsterChase.cpp  MonsterChase.h  MovingObject.cpp  MovingObject.h
Classes/GameObjects/StaticObjects/: BackGround.cpp  BackGround.h  Floor.cpp  Floor.h  Pedestal.cpp  Pedestal.h  Wall.cpp  Wall.h
Classes/Scene/Level/: MapManager.cpp  MapManager.h
Classes/Scene/Menu/: AboutScene.cpp  AboutScene.h  EndScene.cpp  EndScene.h  InGameScene.cpp  InGameScene.h  MMainScene.cpp  MMainScene.h  MSelectLevelScene.cpp  MSelectLevelScene.h
Classes/Scene/Popup/: ExitPopup.cpp  ExitPopup.h  PausePopup.cpp  PausePopup.h  Popup.cpp  Popup.h
Resources/tilemap/: BG_1080p.tsx  FMlv0.tmx  FMlv1.tmx  FMlv10.tmx  FMlv11.tmx  FMlv12.tmx  FMlv13.tmx  FMlv14.tmx  FMlv15.tmx  FMlv16.tmx  FMlv17.tmx  FMlv18.tmx  FMlv19.tmx  FMlv2.tmx  FMlv20.tmx  FMlv3.tmx  FMlv4.tmx  FMlv5.tmx  FMlv6.tmx  FMlv7.tmx  FMlv8.tmx  FMlv9.tmx  level.tmx  level1.tsx  levelTile2_1080p.tsx
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle  gradle.properties
proj.android/app/jni/: Android.mk
proj.android/app/res/values/: strings.xml
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/Fukimochi.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: Funkimochi.sln  Funkimochi.vcxproj  Funkimochi.vcxproj.filters  game.aps
